# phd-advisor-analyzer-agent

./: .env.example  .gitignore  LICENSE  README.md  config.toml  example-research-interests.md  example-sop.md  pyproject.toml
src/: __init__.py  agents.py  config.py  config.toml  gemini_url_context.py  main.py  markdown_normalizer.py  report_formatter.py  schema.py  scholar.py  tools.py
src/instructions/: downselector_agent.md  faculty_extractor_agent.md  main_agent.md  paper_review_agent.md  recruiting_agent.md  scholar_finder_agent.md
tests/: test_agents.py  test_cli_research_url.py  test_config.py  test_config_downselector.py  test_config_secrets.py  test_gemini_url_context.py  test_integration_extractor.py  test_markdown_normalizer.py  test_research_url_flow.py  test_schema.py  test_scholar.py  test_scholar_tool.py  test_tools.py
tests/fixtures/: scholar_citation.html  scholar_profile.html
